# IFC_ApartmentDetection

./: AddedInfo.txt  CMakeLists.txt  main.cpp
inc/: floorProcessor.cpp  floorProcessor.h  helper.cpp  helper.h  roomProcessor.cpp  roomProcessor.h
models/exports/: Exported_AC-20-Smiley-West-10-Bldg_graph.txt  Exported_AC20-FZK-Haus.ifc  Exported_AC20-FZK-Haus_graph.txt  Exported_AC20-Institute-Var-2_graph.txt  Exported_BIM_Projekt_Golden_Nugget-Architektur_und_Ingenieurbau_graph.txt  Exported_FM_ARC_DigitalHub_graph.txt  Exported_On4_building_adjusted_graph.txt
